fix alignment

--- a/web/src/assets/styles/layouts/_pages.scss
+++ b/web/src/assets/styles/layouts/_pages.scss
@@ -41,6 +41,7 @@
   }
   @include media-breakpoint-up(md) {
     padding: 4rem;
+    margin: 2rem;
   }
 
   figure {
